2009-04-16 19:14 +0200  Rocco Rutte  <pdmef@gmx.net>  (ca73c9e8c141)

	* doc/manual.xml.head: Manual: Improve docs on URL syntax, add
	examples

2009-04-16 16:17 +0200  Rocco Rutte  <pdmef@gmx.net>  (052b17f5f7f7)

	* doc/manual.xml.head: Manual: Add user-defined variables to variable
	types

2009-04-11 10:35 +0200  Rocco Rutte  <pdmef@gmx.net>  (7d7976cd4fc4)

	* ChangeLog, buffy.c, buffy.h, commands.c, sendlib.c: Don't raise new
	mail flag on mbox/mmdf Fcc mailboxes. Closes #1896.

2009-04-08 16:25 +0200  Rocco Rutte  <pdmef@gmx.net>  (5b631ee33281)

	* hdrline.c: For %F, display Bcc recipient if no other recipients
	found. Closes #3157.

2009-04-08 15:46 +0200  Rocco Rutte  <pdmef@gmx.net>  (41786fbb344b)

	* ChangeLog, UPDATING, doc/manual.xml.head, doc/muttrc.man.head,
	pattern.c: Make ~x match In-Reply-To, too. Closes #771.

2009-04-07 19:57 +0200  Rocco Rutte  <pdmef@gmx.net>  (667b0006b586)

	* sendlib.c: Fix b5cbd0dab863, closes #3215.

	Still valgrind reports 'fromcode' as leaking.

2009-04-07 11:32 +0200  Erik Hovland  <erik@hovland.org>  (d344c6429a48)

	* ChangeLog, sendlib.c: Try to correct usage of tempfile and *tempfile

	Since tempfile is a double pointer checking for tempfile and then
	dereferencing with *tempfile is not correct.

2009-04-06 22:05 +0200  Rocco Rutte  <pdmef@gmx.net>  (d639baaf57fb)

	* doc/manual.xml.head: Manual: Fix typo

2009-04-06 19:10 +0200  Erik Hovland  <erik@hovland.org>  (4fe35e9984ba)

	* ChangeLog, sendlib.c: mutt_message_to_7bit(): Only close file
	pointer if we opened it

	The pointer is to be managed outside the function and provided. Only
	close it we opened it ourself using fopen().

2009-04-06 19:07 +0200  Erik Hovland  <erik@hovland.org>  (b5cbd0dab863)

	* sendlib.c: Plug memory leaks in sendlib.c

2009-04-05 13:41 +0200  Rocco Rutte  <pdmef@gmx.net>  (5d393e716c51)

	* ChangeLog, init.h, sendlib.c: Backed out changeset 23c7b469ff20

	This requires more thought: if the user has -- in $sendmail, we need